--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,56 +7,56 @@ env:
 
 steps:
 
-  - trigger: "mac-anka-fleet"
-    label: ":anka: Ensure Mojave Anka Template Tag Exists"
-    branches: "*"
-    async: false
-    build:
-      branch: "master"
-      env:
-        REPO: "${BUILDKITE_REPO}"
-        REPO_BRANCH: "${BUILDKITE_BRANCH}"
-        CHECKSUMABLE: "${CHECKSUMABLE}"
-        TEMPLATE: "${ANKA_MOJAVE_TEMPLATE}"
-        TEMPLATE_TAG: "${ANKA_TEMPLATE_TAG}"
-        TAG_COMMANDS: "CLONED_REPO_DIR/scripts/eosio_build.sh -y -P -f" # CLONED_REPO_DIR IS REQUIRED and is where the repo is always cloned into
-        PROJECT_TAG: "${MAC_TAG}"
+  # - trigger: "mac-anka-fleet"
+  #   label: ":anka: Ensure Mojave Anka Template Tag Exists"
+  #   branches: "*"
+  #   async: false
+  #   build:
+  #     branch: "master"
+  #     env:
+  #       REPO: "${BUILDKITE_REPO}"
+  #       REPO_BRANCH: "${BUILDKITE_BRANCH}"
+  #       CHECKSUMABLE: "${CHECKSUMABLE}"
+  #       TEMPLATE: "${ANKA_MOJAVE_TEMPLATE}"
+  #       TEMPLATE_TAG: "${ANKA_TEMPLATE_TAG}"
+  #       TAG_COMMANDS: "CLONED_REPO_DIR/scripts/eosio_build.sh -y -P -f" # CLONED_REPO_DIR IS REQUIRED and is where the repo is always cloned into
+  #       PROJECT_TAG: "${MAC_TAG}"
 
-  - wait
+  # - wait
 
-  - label: ":darwin: [Darwin] Mojave Build"
-    command:
-      - "./scripts/eosio_build.sh -y -P"
-      - "tar -pczf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz build"
-    plugins:
-      chef/anka#v0.4.3:
-        vm-name: $ANKA_MOJAVE_TEMPLATE
-        vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
-        workdir: $ANKA_WORKDIR
-        always-pull: true
-        debug: true
-        wait-network: true
-    agents:
-      - "queue=mac-anka-node-fleet"
-    timeout: 120
-
-
-  # - command: | # macOS Mojave Build
-  #     echo "--- Creating symbolic link to job directory :file_folder:"
-  #     sleep 5
-  #     ln -s "$(pwd)" /data/job
-  #     cd /data/job
-  #     echo "+++ Building :hammer:"
-  #     ./scripts/eosio_build.sh -y -P
-  #     echo "--- Compressing build directory :compression:"
-  #     tar -pczf build.tar.gz build
-  #     if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi
-  #   label: ":darwin: Mojave Build"
+  # - label: ":darwin: [Darwin] Mojave Build"
+  #   command:
+  #     - "./scripts/eosio_build.sh -y -P"
+  #     - "tar -pczf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz build"
+  #   plugins:
+  #     chef/anka#v0.4.3:
+  #       vm-name: $ANKA_MOJAVE_TEMPLATE
+  #       vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
+  #       workdir: $ANKA_WORKDIR
+  #       always-pull: true
+  #       debug: true
+  #       wait-network: true
   #   agents:
-  #     - "role=builder-v2-2"
-  #     - "os=mojave"
-  #   artifact_paths: "build.tar.gz"
+  #     - "queue=mac-anka-node-fleet"
   #   timeout: 120
+
+
+  - command: | # macOS Mojave Build
+      echo "--- Creating symbolic link to job directory :file_folder:"
+      sleep 5
+      ln -s "$(pwd)" /data/job
+      cd /data/job
+      echo "+++ Building :hammer:"
+      ./scripts/eosio_build.sh -y -P
+      echo "--- Compressing build directory :compression:"
+      tar -pczf build.tar.gz build
+      if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi
+    label: ":darwin: Mojave Build"
+    agents:
+      - "role=builder-v2-2"
+      - "os=mojave"
+    artifact_paths: "build.tar.gz"
+    timeout: 120
 
   # - command: | # Amazon Linux 2 Build
   #       echo "+++ :hammer: Building"
@@ -324,67 +324,67 @@ steps:
   #       workdir: /data/job
   #   timeout: 60
 
-  - label: ":darwin: [Darwin] Mojave Tests"
-    command:
-      - "./scripts/parallel-test.sh /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
-    artifact_paths:
-      - "build/mongod.log"
-      - "build/genesis.json"
-      - "build/config.ini"
-    agents:
-      - "queue=mac-anka-node-fleet"
-    plugins:
-      chef/anka#v0.4.3:
-        vm-name: $ANKA_MOJAVE_TEMPLATE
-        vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
-        workdir: $ANKA_WORKDIR
-        always-pull: true
-        debug: true
-        wait-network: true
-    timeout: 120
-
-  - label: ":darwin: [Darwin] Mojave Tests"
-    command:
-      - "./scripts/serial-test.sh /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
-    artifact_paths:
-      - "build/mongod.log"
-      - "build/genesis.json"
-      - "build/config.ini"
-    agents:
-      - "queue=mac-anka-node-fleet"
-    plugins:
-      chef/anka#v0.4.3:
-        vm-name: $ANKA_MOJAVE_TEMPLATE
-        vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
-        workdir: $ANKA_WORKDIR
-        always-pull: true
-        debug: true
-        wait-network: true
-    timeout: 120
-
-  # # Mojave Tests
-  # - command: |
-  #       echo "--- :arrow_down: Downloading Build Directory"
-  #       buildkite-agent artifact download "build.tar.gz" . --step ":darwin: Mojave Build"
-  #       echo "+++ :microscope: Running Tests"
-  #       ln -s "$(pwd)" /data/job
-  #       ./scripts/parallel-test.sh
-  #   label: ":darwin: Mojave Tests"
+  # - label: ":darwin: [Darwin] Mojave Tests"
+  #   command:
+  #     - "./scripts/parallel-test.sh /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
+  #   artifact_paths:
+  #     - "build/mongod.log"
+  #     - "build/genesis.json"
+  #     - "build/config.ini"
   #   agents:
-  #     - "role=tester-v2-2"
-  #     - "os=mojave"
-  #   timeout: 60
-  # - command: |
-  #       echo "--- :arrow_down: Downloading Build Directory"
-  #       buildkite-agent artifact download "build.tar.gz" . --step ":darwin: Mojave Build"
-  #       echo "+++ :microscope: Running Tests"
-  #       ln -s "$(pwd)" /data/job
-  #       ./scripts/serial-test.sh
-  #   label: ":darwin: Mojave NP Tests"
+  #     - "queue=mac-anka-node-fleet"
+  #   plugins:
+  #     chef/anka#v0.4.3:
+  #       vm-name: $ANKA_MOJAVE_TEMPLATE
+  #       vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
+  #       workdir: $ANKA_WORKDIR
+  #       always-pull: true
+  #       debug: true
+  #       wait-network: true
+  #   timeout: 120
+
+  # - label: ":darwin: [Darwin] Mojave Tests"
+  #   command:
+  #     - "./scripts/serial-test.sh /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
+  #   artifact_paths:
+  #     - "build/mongod.log"
+  #     - "build/genesis.json"
+  #     - "build/config.ini"
   #   agents:
-  #     - "role=tester-v2-2"
-  #     - "os=mojave"
-  #   timeout: 60
+  #     - "queue=mac-anka-node-fleet"
+  #   plugins:
+  #     chef/anka#v0.4.3:
+  #       vm-name: $ANKA_MOJAVE_TEMPLATE
+  #       vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
+  #       workdir: $ANKA_WORKDIR
+  #       always-pull: true
+  #       debug: true
+  #       wait-network: true
+  #   timeout: 120
+
+  # Mojave Tests
+  - command: |
+        echo "--- :arrow_down: Downloading Build Directory"
+        buildkite-agent artifact download "build.tar.gz" . --step ":darwin: Mojave Build"
+        echo "+++ :microscope: Running Tests"
+        ln -s "$(pwd)" /data/job
+        ./scripts/parallel-test.sh
+    label: ":darwin: Mojave Tests"
+    agents:
+      - "role=tester-v2-2"
+      - "os=mojave"
+    timeout: 60
+  - command: |
+        echo "--- :arrow_down: Downloading Build Directory"
+        buildkite-agent artifact download "build.tar.gz" . --step ":darwin: Mojave Build"
+        echo "+++ :microscope: Running Tests"
+        ln -s "$(pwd)" /data/job
+        ./scripts/serial-test.sh
+    label: ":darwin: Mojave NP Tests"
+    agents:
+      - "role=tester-v2-2"
+      - "os=mojave"
+    timeout: 60
 
 
   # - wait
