--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -26,8 +26,6 @@ steps:
 
   - label: ":darwin: [Darwin] Mojave Build"
     command:
-      - "cd tools && pwd"
-      - "pwd"
       - "./scripts/eosio_build.sh -y -P"
       - "tar -pczf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz build"
     plugins:
@@ -326,11 +324,12 @@ steps:
   #       workdir: /data/job
   #   timeout: 60
 
+
   - label: ":darwin: [Darwin] Mojave Tests"
     command:
       - "tar -xzvf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
-      - "cd build && ctest -L nonparallelizable_tests --output-on-failure -T Test"
-      - "pwd && mv $(pwd)/Testing/$(ls $(pwd)/Testing/ | grep '20' | tail -n 1)/Test.xml test-results.xml"
+      - "cd build && ctest -j $(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test"
+      - "cd build && mv $(pwd)/Testing/$(ls $(pwd)/Testing/ | grep '20' | tail -n 1)/Test.xml test-results.xml"
     artifact_paths:
       - "build/mongod.log"
       - "build/genesis.json"
@@ -351,11 +350,14 @@ steps:
 
   - label: ":darwin: [Darwin] Mojave Tests"
     command:
-      - "./scripts/serial-test.sh /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
+      - "tar -xzvf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
+      - "cd build && ctest -L nonparallelizable_tests --output-on-failure -T Test"
+      - "cd build && mv $(pwd)/Testing/$(ls $(pwd)/Testing/ | grep '20' | tail -n 1)/Test.xml test-results.xml"
     artifact_paths:
       - "build/mongod.log"
       - "build/genesis.json"
       - "build/config.ini"
+      - "build/test-results.xml"
     agents:
       - "queue=mac-anka-node-fleet"
     plugins:
@@ -363,6 +365,7 @@ steps:
         vm-name: $ANKA_MOJAVE_TEMPLATE
         vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
         workdir: $ANKA_WORKDIR
+        no-volume: true
         always-pull: true
         debug: true
         wait-network: true
