--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -34,7 +34,7 @@ steps:
       git submodule update --init --recursive
       ./scripts/eosio_build.sh -y -P -m
       tar -pczf build.tar.gz build
-      [[ -f build.tar.gz ]] && buildkite-agent artifact upload build.tar.gz || (echo 'ERROR: No build.tar.gz artifact found, or artifact upload failed!'; echo '$$ ls -la'; ls -la; exit 1)
+      [[ -f build.tar.gz ]] && buildkite-agent artifact upload build.tar.gz || (echo '+++ :no_entry: ERROR: No build.tar.gz artifact found, or artifact upload failed!'; echo '$$ ls -la'; ls -la; exit 1)
     plugins:
       chef/anka#v0.4.4:
         no-volume: true
@@ -56,7 +56,7 @@ steps:
     command: |
       ./scripts/eosio_build.sh -y -P -m
       tar -pczf build.tar.gz build
-      [[ ! -f build.tar.gz ]] && (echo 'ERROR: No build.tar.gz artifact found!'; echo '$$ ls -la'; ls -la; exit 1)
+      [[ ! -f build.tar.gz ]] && (echo '+++ :no_entry: ERROR: No build.tar.gz artifact found!'; echo '$$ ls -la'; ls -la; exit 1) || :
     agents:
       queue: "automation-large-builder-fleet"
     artifact_paths: "build.tar.gz"
@@ -78,7 +78,7 @@ steps:
     command: |
       ./scripts/eosio_build.sh -y -P -m
       tar -pczf build.tar.gz build
-      [[ ! -f build.tar.gz ]] && (echo 'ERROR: No build.tar.gz artifact found!'; echo '$$ ls -la'; ls -la; exit 1)
+      [[ ! -f build.tar.gz ]] && (echo '+++ :no_entry: ERROR: No build.tar.gz artifact found!'; echo '$$ ls -la'; ls -la; exit 1) || :
     agents:
       queue: "automation-large-builder-fleet"
     artifact_paths: "build.tar.gz"
@@ -100,7 +100,7 @@ steps:
     command: |
       ./scripts/eosio_build.sh -y -P -m
       tar -pczf build.tar.gz build
-      [[ ! -f build.tar.gz ]] && (echo 'ERROR: No build.tar.gz artifact found!'; echo '$$ ls -la'; ls -la; exit 1)
+      [[ ! -f build.tar.gz ]] && (echo '+++ :no_entry: ERROR: No build.tar.gz artifact found!'; echo '$$ ls -la'; ls -la; exit 1) || :
     label: ":ubuntu: Ubuntu 16.04 Build"
     agents:
       queue: "automation-large-builder-fleet"
@@ -123,7 +123,7 @@ steps:
     command: |
       ./scripts/eosio_build.sh -y -P -m
       tar -pczf build.tar.gz build
-      [[ ! -f build.tar.gz ]] && (echo 'ERROR: No build.tar.gz artifact found!'; echo '$$ ls -la'; ls -la; exit 1)
+      [[ ! -f build.tar.gz ]] && (echo '+++ :no_entry: ERROR: No build.tar.gz artifact found!'; echo '$$ ls -la'; ls -la; exit 1) || :
     agents:
       queue: "automation-large-builder-fleet"
     artifact_paths: "build.tar.gz"
@@ -149,7 +149,7 @@ steps:
       git clone ${BUILDKITE_PULL_REQUEST_REPO:-$BUILDKITE_REPO} .
       git checkout ${BUILDKITE_COMMIT}
       buildkite-agent artifact download build.tar.gz . --step ":darwin: [Darwin] Mojave Build"
-      export BUILDKITE_TAG='not-empty'
+      BUILDKITE_TAG='non-empty'
       ./scripts/parallel-test.sh
     agents:
       - "queue=mac-anka-node-fleet"
@@ -194,7 +194,7 @@ steps:
     command: |
       echo "--- :arrow_down: Downloading Build Directory"
       buildkite-agent artifact download build.tar.gz . --step ":aws: Amazon Linux 2 Build"
-      export BUILDKITE_TAG='not-empty'
+      BUILDKITE_TAG='non-empty'
       ./scripts/parallel-test.sh
     agents:
       queue: "automation-large-builder-fleet"
@@ -240,7 +240,7 @@ steps:
     command: |
       echo "--- :arrow_down: Downloading Build Directory"
       buildkite-agent artifact download build.tar.gz . --step ":centos: CentOS 7 Build"
-      export BUILDKITE_TAG='not-empty'
+      BUILDKITE_TAG='non-empty'
       ./scripts/parallel-test.sh
     agents:
       queue: "automation-large-builder-fleet"
@@ -285,7 +285,7 @@ steps:
     command: |
       echo "--- :arrow_down: Downloading Build Directory"
       buildkite-agent artifact download build.tar.gz . --step ":ubuntu: Ubuntu 16.04 Build"
-      export BUILDKITE_TAG='not-empty'
+      BUILDKITE_TAG='non-empty'
       ./scripts/parallel-test.sh
     agents:
       queue: "automation-large-builder-fleet"
@@ -330,7 +330,7 @@ steps:
     command: |
       echo "--- :arrow_down: Downloading Build Directory"
       buildkite-agent artifact download build.tar.gz . --step ":ubuntu: Ubuntu 18.04 Build"
-      export BUILDKITE_TAG='not-empty'
+      BUILDKITE_TAG='non-empty'
       ./scripts/parallel-test.sh
     agents:
       queue: "automation-large-builder-fleet"
