added bash-bats folder with tests
New build/install/uninstall scripts

pipeline change

Cmake install path change (removing eosio) and .environment file

gitignore additions

[skip ci] removed 7 from function since devtoolset-8 is available and we might change it in the near future

[skip ci] bats readme updates

[skip ci] Architecture move

[skip ci] Removed set -i from ubuntu

eosio_install improvements

removing -P from pipeline config

Fix exception #

Update to appbase with max priority on main thread

Update to appbase with set_thread_priority_max method

Add call to set_thread_priority_max

(softfloat sync) clean up strict-aliasing rules warnings

this causes a lot of warnings on gcc7

Adds configuration for replay test pipeline

Fix `-b` flag for `cleos get table` subcommand

Add `boost/asio/io_context.hpp` header to `transaction_metadata.hpp`

[skip ci] Fixed build-esssential issue on ubuntu 18

[skip ci] Various fixes for bats

[skip ci] added back build-essentials line

[skip ci] bzip added back to ubuntu deps

[skip ci] More bats fixes to simplify c++ warning

[skip ci] Fix for prompting when all packages are already installed

[skip ci] bootstrap.sh for boost needs toolset=clang if we're pinning (fixes ubuntu16 build

[skip ci] quick removal of debug

[skip ci] Better placement for apt update prompt

[skip ci] Support for llvm/clang7 on ubuntu 16

[skip ci] regex match clang so we can support ehen readlink follows symlinks

[skip ci] Reverted support for clang/llvm7 on ubuntu 16 since it throws an error (Cannot find a C++ compiler that supports both C++11 and the specified C++ flags)

[skip ci] Show output for which install

[skip ci] Moved which to after CURRENT_USER and moved CURRENT_USER to environment file

[skip ci] Support for version inconsistencies

homebrew install fixes and move to helper

Various bats fixes and readme update

centos test fixes for clang/build-essential

amazonlinux2/centos7 gcc-c++ needed for -P

amazonlinux2/centos7 gcc-c++ 

--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -29,5 +29,13 @@
             "SKIP_PRE_V180": "true",
             "SKIP_V180": "false"
         }
+    },
+    "eosio-replay-tests":
+    {
+        "environment":
+        {
+            "SKIP_PRE_V180": "true",
+            "SKIP_V180": "false"
+        }
     }
 }
