--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -1,39 +1,39 @@
 {
-    "eosio-build-unpinned":
-    {
+    "eosio": {
+        "pipeline-branch": "bats-v3",
+        "environment": {
+            "IMAGE_TAG": "bats-v3",
+            "DEBUG": true
+        }
+    },
+    "eosio-base-images": {
+        "pipeline-branch": "bats-v3"
+    },
+    "eosio-build-unpinned": {
         "pipeline-branch": "protocol-features-sync-nodes"
     },
-    "eosio-lrt":
-    {
+    "eosio-lrt": {
         "pipeline-branch": "protocol-features-sync-nodes"
     },
-    "eos-multiversion-tests":
-    {
+    "eos-multiversion-tests": {
         "pipeline-branch": "protocol-features-sync-nodes",
-        "configuration":
-        [
+        "configuration": [
             "170=v1.7.0"
         ]
     },
-    "eosio-docker-builds":
-    {
-        "environment":
-        {
+    "eosio-docker-builds": {
+        "environment": {
             "BUILDER_TAG": "v1.8.0"
         }
     },
-    "eosio-sync-tests":
-    {
-        "environment":
-        {
+    "eosio-sync-tests": {
+        "environment": {
             "SKIP_PRE_V180": "true",
             "SKIP_V180": "false"
         }
     },
-    "eosio-replay-tests":
-    {
-        "environment":
-        {
+    "eosio-replay-tests": {
+        "environment": {
             "SKIP_PRE_V180": "true",
             "SKIP_V180": "false"
         }
