--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -54,6 +54,7 @@ add_library( eosio_chain
              chaindb/abi_info.cpp
              chaindb/storage_calculator.cpp
              chaindb/typed_name.cpp
+             chaindb/account_abi_info.cpp
 
              cyberway/domain_name.cpp
              cyberway/cyberway_contract.cpp
